--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 5;
+}
+
+.navigation {
+    overflow: hidden;
+    background-color: white;
+}
+
+.nagivation a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    left: 50%;
+}
+
 body {
     background-color: rgba(199, 240, 225, 0.7);
     /*this color might work background-color: blue;*/
